--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TestProject</string>
+
+    <string name="label_password">Password</string>
+    <string name="label_email">Email</string>
+
+    <string name="action_login">Login</string>
+
+    <string name="error_format_invalid">Format is invalid</string>
+    <string name="error_too_short">Too short</string>
 </resources>
